Revision history for Math-BigNum

0.20    2017-xx-xx

        [ADDED]

        - Added the `remove(n,k)` and `bremove(n,k)` methods, for removing all occurrences of the factor k from integer n.

        [FIXES]

        - Fixed a special case in modpow(x, y, z) when y < 0 and gcd(x, z) != 1.

0.19    2017-01-21

        [PERFORMANCE IMPROVEMENTS]

        - `fsub()`, `fadd()`, `fmul()` and `fdiv()` are all slightly faster (including their `b*` versions).

        Instead of converting the second argument to a new MPFR object (which always has a type of mpq), we now pass it directly, using a corresponding `Rmpfr_*_q()` function.

        [FIXES]

        - The integer limits from Math::GMPq are used only when they are defined, otherwise they are computed with pack() and unpack().

0.18    2017-01-01

        [FIXES]

        - Removed some tests for irootrem() that fail under old versions of GMP (< 5.1.0).

0.17    2017-01-01

        [ADDED]

        - isqrtrem(n)   : the integer square root and the remainder.
        - irootrem(n)   : the integer nth root and the remainder.
        - eta(n)        : the Dirichlet eta function at n.
        - beta(x,y)     : the beta function (for x > 0 and y > 0).
        - lambert_w(x)  : the Lambert W function (for x >= -1/e)
        - rad2deg(n)    : converts radians to degrees
        - deg2rad(n)    : converts degrees to radians
        - bessel_j(x,n) : the first order Bessel function: J_n(x).
        - bessel_y(x,n) : the second order Bessel function: Y_n(x).

        [FIXES]

        - Fixed the accuracy in the method bernreal() for small n.
        - Fixed a special case in the method irand() when the self value is 0.

            + irand(0) = 0

        [OTHER]

        - Minor optimization in the decimal expansion of non-integers.

0.16    2016-12-11

        [ADDED]

        - Added two methods for computing the nth-Harmonic number:

            + harmfrac(n)
            + harmreal(n)
